[package]
name = "yt-notif-bot"
version = "0.1.3"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.14.0"
google-youtube3 = "5.0.5"
serenity = "0.12.2"
sqlx = { version = "0.8.0", features = ["runtime-tokio", "sqlite"] }
thiserror = "2.0.11"
tokio = { version = "1.39.3", features = ["rt-multi-thread"] }
